--- a/crossgram/locale/crossgram.pot
+++ b/crossgram/locale/crossgram.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: crossgram 0.0\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2024-05-24 10:46+0000\n"
+"POT-Creation-Date: 2024-06-10 08:47+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -50,34 +50,42 @@ msgid "Parameters"
 msgstr ""
 
 #: crossgram/__init__.py:25
-msgid "Topic"
+msgid "Value"
 msgstr ""
 
 #: crossgram/__init__.py:26
-msgid "Topics"
+msgid "Values"
 msgstr ""
 
 #: crossgram/__init__.py:27
-msgid "Unit"
+msgid "Topic"
 msgstr ""
 
 #: crossgram/__init__.py:28
-msgid "Units"
+msgid "Topics"
 msgstr ""
 
 #: crossgram/__init__.py:29
-msgid "Unit Parameter"
+msgid "Unit"
 msgstr ""
 
 #: crossgram/__init__.py:30
-msgid "Unit Parameters"
+msgid "Units"
 msgstr ""
 
 #: crossgram/__init__.py:31
-msgid "Unit Value"
+msgid "Unit Parameter"
 msgstr ""
 
 #: crossgram/__init__.py:32
+msgid "Unit Parameters"
+msgstr ""
+
+#: crossgram/__init__.py:33
+msgid "Unit Value"
+msgstr ""
+
+#: crossgram/__init__.py:34
 msgid "Unit Values"
 msgstr ""
 
